--- a/style.css
+++ b/style.css
@@ -19,12 +19,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin-top: 30px;
 }
 
 .presentation {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.presentation img {
+    border-radius: 100px;
 }
 
 .competences {
