--- a/style.css
+++ b/style.css
@@ -3,38 +3,69 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    color: #e0e0e0;
 }
 
 body {
     display: flex;
-    flex-direction: column; 
-    height: 100vh;
-    margin: 0; 
+    flex-direction: column;
+    width: 100%;
+    min-height: 100%;
 }
 
 #wrapper-portfolio {
-    background-color: #FFFDFD;
-    min-width: 100vw;
+    width: 100%;
     min-height: 100vh;
+    background-color: #0d0d0d;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    padding-top: 30px; 
 }
 
 .title {
     margin-bottom: 30px;
-}
-.presentation {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 30px;
+    text-align: center;
 }
 
-.presentation img {
-    border-radius: 100px;
+.title strong {
+color: #8e2de2;
+font-weight: 300;
 }
+
+.presentation {
+display: flex;
+margin-bottom: 30px;
+flex-direction: row-reverse;
+width: 80%;
+justify-content: space-around;
+margin-top: 30px;
+}
+
+.presentation-text {
+display: flex;
+flex-direction: column;
+gap: 1rem; 
+max-width: 60%;
+}
+
+.presentation-text p {
+    font-size: 18px;
+}
+
+
+.presentation img {
+    border-radius: 200px;
+    box-shadow:
+    0 0 8px #a259ff,
+    0 0 16px #a259ff,
+    0 0 24px #a259ff;
+    height: 250px;
+    width: 250px;
+    
+}
+
 
 .competences {
     display: flex;
