--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
     min-height: 100%;
 }
 
+
+
 #wrapper-portfolio {
     width: 100%;
     min-height: 100vh;
@@ -21,13 +23,29 @@ body {
     flex-direction: column;
     align-items: center;
     padding-top: 30px; 
+
 }
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.8s ease-out;
+}
+
+.fade-in.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 
 .title {
     margin-bottom: 30px;
     display: flex;
     text-align: center;
 }
+
+
+
 
 .title strong {
 color: #8e2de2;
@@ -41,6 +59,8 @@ flex-direction: row-reverse;
 width: 80%;
 justify-content: space-around;
 margin-top: 30px;
+
+
 }
 
 .presentation-text {
