--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* 
+=================================================================
+=========================BASE==================================
+=================================================================
+ */
+
 * {
     margin: 0;
     padding: 0;
@@ -27,15 +33,22 @@ body {
 }
 
 .fade-in {
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all 0.8s ease-out;
+opacity: 0;
+transform: translateY(20px);
+transition: all 0.8s ease-out;
 }
 
 .fade-in.visible {
-  opacity: 1;
-  transform: translateY(0);
+opacity: 1;
+transform: translateY(0);
 }
+
+  /* 
+=================================================================
+=========================PRESENTATION==================================
+=================================================================
+ */
+  
 
 
 .title {
@@ -43,9 +56,6 @@ body {
     display: flex;
     text-align: center;
 }
-
-
-
 
 .title strong {
 color: #8e2de2;
@@ -83,8 +93,14 @@ max-width: 60%;
     0 0 24px #a259ff;
     height: 250px;
     width: 250px;
-    
 }
+
+  /* 
+=================================================================
+=========================COMPETENCES==================================
+=================================================================
+ */
+  
 
 
 .competences {
@@ -92,7 +108,6 @@ max-width: 60%;
     width: 100%;
     flex-direction: row;
     justify-content: space-evenly;
-
 }
 
 .competence {
@@ -103,11 +118,47 @@ max-width: 60%;
 
 .competences-title {
     margin-bottom: 30px;
+    margin-top: 100px;
+    font-weight: 300;
+}
+
+.competences-title strong {
+    color: #8e2de2;
+}
+
+.competences ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.competence {
+    display: flex;
+    width: 300px;
+    height: 300px;
+    border: 1px solid #8e2de2;
+    padding: 15px;
+}
+
+.competence h3 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 .competences {
     margin-bottom: 30px;
 }
+
+  /* 
+=================================================================
+=========================PROJETS==================================
+=================================================================
+ */
+  
 
 .projets-title {
     margin-top: 30px;
@@ -135,6 +186,13 @@ max-width: 60%;
 .projet p {
     display: none;
 }
+
+  /* 
+=================================================================
+=========================CONTACT==================================
+=================================================================
+ */
+  
 
 .contact {
     display: flex;
