--- a/style.css
+++ b/style.css
@@ -43,13 +43,11 @@ opacity: 1;
 transform: translateY(0);
 }
 
-  /* 
+/* 
 =================================================================
 =========================PRESENTATION==================================
 =================================================================
- */
-  
-
+*/
 
 .title {
     margin-bottom: 30px;
@@ -99,12 +97,12 @@ max-width: 60%;
 =================================================================
 =========================COMPETENCES==================================
 =================================================================
- */
+*/
 
 .competences {
     display: flex;
-    width: 100%;
     flex-direction: row;
+    gap: 60px;
     justify-content: space-evenly;
 }
 
@@ -161,7 +159,6 @@ max-width: 60%;
     border-radius: 10px;
     transition: 0.3s;
     cursor: pointer;
-    
 }
 
 .btn-download:hover {
@@ -203,9 +200,14 @@ max-width: 60%;
     display: flex;
     justify-content: center;
 }
+.projet {
+    margin-bottom: 70px;
+}
 
 .projet h3 {
+    margin-top: 25px;
     padding-bottom: 20px;
+    font-size: 25px;
 }
 
 .projet h3 a {
@@ -217,14 +219,48 @@ max-width: 60%;
     text-decoration: underline;
 }
 
-.projet img {
-    height: 400px;
+.img-container {
+    position: relative;
+    cursor: pointer;
     width: 400px;
+    height: 400px;
 }
 
-.projet p {
-    display: none;
+.img-container img {
+    display: block;
+    height: 100%;
+    width: 100%;
 }
+
+.text-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    gap: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    text-align: left;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.text-image p {
+    margin-left: 30px;
+    font-size: 18px;
+}
+
+.img-container:hover .text-image {
+    opacity: 1;
+}
+
 
 /* 
 =================================================================
@@ -254,3 +290,35 @@ max-width: 60%;
 .contact i {
     font-size: 20px;
 }
+
+@media screen and (max-width: 768px) { 
+
+.projets {
+    flex-direction: column;
+    }
+
+
+.competences {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.presentation-text {
+    max-width: 100%;
+}
+
+.presentation img {
+    height: 200px;
+    width: 200px;
+}
+
+.presentation {
+    gap: 50px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+}
+
+
