--- a/style.css
+++ b/style.css
@@ -366,6 +366,12 @@ transform: translateY(-5px);
     justify-content: center;
     align-items: center;
 }
+
+.img-container {
+
+    width: 100%;
+    height: 100%;
+}
 }
 
 
